--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -13,7 +13,7 @@
 
         <script type="text/javascript">
         document.addEventListener('deviceready', function () {
-
+                                  alert();
           // Just for iOS devices.
           if (window.device.platform === 'iOS') {
             alert();
