--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1,7 +1,21 @@
 <html>
     <head>
-        <script src="webrtc.js"></script>
-    </head>
+        <!--
+         Customize this policy to fit your own app's needs. For more guidance, see:
+         https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
+         Some notes:
+         * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
+         * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
+         * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
+         * Enable inline JS: add 'unsafe-inline' to default-src
+         -->
+     
+            <meta name="format-detection" content="telephone=no">
+                <meta name="msapplication-tap-highlight" content="no">
+                    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+                        <link rel="stylesheet" type="text/css" href="css/index.css">
+                            <title>Hello World</title>
+                            </head>
 
     <body>
         <video id="localVideo" autoplay muted style="width:40%;"></video>
@@ -10,15 +24,12 @@
         <br />
 
         <input type="button" id="start" onclick="start(true)" value="Start Video"></input>
-
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="webrtc.js"></script>
         <script type="text/javascript">
         document.addEventListener('deviceready', function () {
-                                  alert();
-          // Just for iOS devices.
-          if (window.device.platform === 'iOS') {
             alert();
             cordova.plugins.iosrtc.registerGlobals();
-          }
           pageReady();
         });
             
